--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>telegrambots</artifactId>
             <version>3.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 </project>
